--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -1,4 +1,23 @@
 ---
+- name: Verify dict format for apt package component variables
+  fail:
+    msg: "{{ lookup('template', 'package_vars_wrong_format_msg.j2') }}"
+  when: package_vars_wrong_format | count
+  vars:
+    package_vars:
+      php_extensions_default: "{{ php_extensions_default }}"
+      php_extensions_custom: "{{ php_extensions_custom }}"
+    package_vars_wrong_format: "[{% for k,v in package_vars.iteritems() if v | type_debug != 'dict' %}'{{ k }}',{% endfor %}]"
+
+- name: Verify dict format for apt package combined variables
+  fail:
+    msg: "{{ lookup('template', 'package_vars_wrong_format_msg.j2') }}"
+  when: package_vars_wrong_format | count
+  vars:
+    package_vars:
+      php_extensions: "{{ php_extensions }}"
+    package_vars_wrong_format: "[{% for k,v in package_vars.iteritems() if v | type_debug != 'dict' %}'{{ k }}',{% endfor %}]"
+
 - name: Add PHP 7.2 PPA
   apt_repository:
     repo: "ppa:ondrej/php"
