--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -1,4 +1,41 @@
 ---
+- name: Retrieve local SSH client's settings per host
+  set_fact:
+    ssh_client_ciphers: "{{ lookup('pipe', 'ssh -ttG ' + ansible_host + ' | grep ciphers') }}"
+    ssh_client_kex: "{{ lookup('pipe', 'ssh -ttG ' + ansible_host + ' | grep kexalgorithms') }}"
+    ssh_client_macs: "{{ lookup('pipe', 'ssh -ttG ' + ansible_host + ' | grep macs') }}"
+    ssh_client_host_key_algorithms: "{{ lookup('pipe', 'ssh -ttG ' + ansible_host + ' | grep hostkeyalgorithms') }}"
+  when: openssh_6_8_plus and validate_ssh | default(true)
+
+- name: Validate compatible settings between SSH client and server
+  assert:
+    that:
+      - overlapping_ciphers | count
+      - overlapping_kex | count
+      - overlapping_macs | count
+      - overlapping_host_keys | count
+    msg: "{{ lookup('template', 'validate_ssh_msg.j2') }}"
+  when: openssh_6_8_plus and validate_ssh | default(true)
+  
+- name: Verify dict format for apt package component variables
+  fail:
+    msg: "{{ lookup('template', 'package_vars_wrong_format_msg.j2') }}"
+  when: package_vars_wrong_format | count
+  vars:
+    package_vars:
+      sshd_packages_default: "{{ sshd_packages_default }}"
+      sshd_packages_custom: "{{ sshd_packages_custom }}"
+    package_vars_wrong_format: "[{% for k,v in package_vars.iteritems() if v | type_debug != 'dict' %}'{{ k }}',{% endfor %}]"
+
+- name: Verify dict format for apt package combined variables
+  fail:
+    msg: "{{ lookup('template', 'package_vars_wrong_format_msg.j2') }}"
+  when: package_vars_wrong_format | count
+  vars:
+    package_vars:
+      sshd_packages: "{{ sshd_packages }}"
+    package_vars_wrong_format: "[{% for k,v in package_vars.iteritems() if v | type_debug != 'dict' %}'{{ k }}',{% endfor %}]"
+
 - name: Ensure latest SSH server and client are installed
   apt:
     name: "{{ item.key }}"
