Added web_server variable for determining which server software to install (nginx or apache2)

--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -1,3 +1,6 @@
+# which web server to use, valid values are nginx or apache2
+web_server: nginx
+
 composer_keep_updated: true
 composer_global_packages:
  - { name: hirak/prestissimo }
@@ -7,7 +10,9 @@ apt_security_package_state: latest
 apt_dev_package_state: latest
 ntp_timezone: Etc/UTC
 ntp_manage_config: true
+
 deploy_using_git_archive: false
+
 www_root: /srv/www
 ip_whitelist:
   - "{{ (env == 'development') | ternary(ansible_default_ipv4.gateway, ipify_public_ip | default('')) }}"
