Refactor "reload nginx" to generic "reload webserver"

--- a/roles/common/tasks/disable_challenge_sites.yml
+++ b/roles/common/tasks/disable_challenge_sites.yml
@@ -4,4 +4,4 @@
     path: "{{ nginx_path }}/sites-enabled/letsencrypt-{{ item }}.conf"
     state: absent
   with_items: "{{ wordpress_sites.keys() }}"
-  notify: reload nginx
+  notify: reload webserver
