--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -22,27 +22,27 @@
     chdir: "{{ nginx_path }}/ssl"
     creates: "{{ nginx_path }}/ssl/dhparams.pem"
   when: sites_use_ssl
-  notify: reload nginx
+  notify: reload webserver
   tags: [diffie-hellman, letsencrypt, wordpress, wordpress-setup, nginx-includes, nginx-sites]
 
 - name: Copy h5bp configs
   copy:
     src: templates/h5bp
     dest: "{{ nginx_path }}"
-  notify: reload nginx
+  notify: reload webserver
 
 - name: Create nginx.conf
   template:
     src: "{{ nginx_conf }}"
     dest: "{{ nginx_path }}/nginx.conf"
-  notify: reload nginx
+  notify: reload webserver
   tags: nginx-includes
 
 - name: Disable default server
   file:
     path: "{{ nginx_path }}/sites-enabled/default"
     state: absent
-  notify: reload nginx
+  notify: reload webserver
 
 - name: Enable Nginx to start on boot
   service:
