--- a/roles/wordpress-setup/tasks/main.yml
+++ b/roles/wordpress-setup/tasks/main.yml
@@ -38,9 +38,15 @@
 
 - import_tasks: nginx-includes.yml
   tags: [nginx-includes, wordpress-setup-nginx]
+  when: web_server == 'nginx'
 
 - import_tasks: nginx.yml
   tags: wordpress-setup-nginx
+  when: web_server == 'nginx'
+
+- import_tasks: apache2.yml
+  tags: wordpress-setup-apache2
+  when: web_server == 'apache2'
 
 - name: Setup WP system cron
   cron:
