--- a/roles/letsencrypt/defaults/main.yml
+++ b/roles/letsencrypt/defaults/main.yml
@@ -32,8 +32,8 @@ letsencrypt_intermediate_cert_path: /etc/ssl/certs/lets-encrypt-x3-cross-signed.
 letsencrypt_intermediate_cert_url: 'https://letsencrypt.org/certs/lets-encrypt-x3-cross-signed.pem'
 letsencrypt_intermediate_cert_sha256sum: 'e446c5e9dbef9d09ac9f7027c034602492437a05ff6c40011d7235fca639c79a'
 
-letsencrypt_keys_dir: "{{ nginx_ssl_path }}/letsencrypt"
-letsencrypt_certs_dir: "{{ nginx_ssl_path }}/letsencrypt"
+letsencrypt_keys_dir: "{{ webserver_ssl_path }}/letsencrypt"
+letsencrypt_certs_dir: "{{ webserver_ssl_path }}/letsencrypt"
 
 # the minimum age (in days) after which a certificate will be renewed
 letsencrypt_min_renewal_age: 60
